# ai-delver-runtime

./: .gitignore  MANIFEST.in  pyproject.toml  pyrightconfig.json
runtime/: config.json  config.py  runtime.py
runtime/episode_trajectory/: __init__.py  _get_trajectory_dir.py  _trajectory_metadata_manager.py  delver_action.py  episode_trajectory.py  trajectory_loader.py  trajectory_saver.py  trajectory_stats_calculator.py
runtime/episode_trajectory/snapshots/: __init__.py  entity_state_factory_provider.py  entity_state_snapshot.py  frame_snapshot.py  interpolate_frame_snapshots.py  skeletal_entity_state_snapshot.py
runtime/simulation/: simulation.py
runtime/world_objects/: world_object.py  world_objects_controller.py
runtime/world_objects/entities/: entity.py  entity_body.py  skeletal_entity.py
runtime/world_objects/entities/delver/: delver.py  delver_body.py
runtime/world_objects/items/: goal.py  item.py
